# SVN-PIN-STATION

./: .gitignore  README.html  README.md  build.py  main.py  pyproject.toml  requirements.txt  settings.py
aruco/: aruco_layout.pptx
camera/calib/: calib_1080.npz  calib_480.npz
config/: config.yaml  factoryConfig.yaml  userConfig.yaml
engine/: QCodeEditor.py  README.html  camera_calibration.py  camera_undistorted.py  detection.py  generate_matrix.py  loader.py  move_mini_cobot.py  settings.py  splash.py  task_kill.py
matrix/: batt_matrix.npy
resource/: InterfaceUI.py  InterfaceUI.ui  resource.qrc  settingsUI.py  settingsUI.ui
worker/: arm.py  cam_pos.py  cam_shot.py
